--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -75,6 +75,10 @@
               width: 400px;
             }
           }
+          label {
+            font-family: 'Karla Regular';
+            font-size: 16pt;
+          }
           .ng-select.transaction-type-select,
           .ng-select.transaction-category-select {
             width: 360px;
