Fne 1181 mahendra sprint15 (#606)
* added transaction_type_identifier in sched_a and sched_b table

* FNE 718 changes

* FNE 718 changes

* FNE 718 changes

FNE 718 changes

* FNE 948 changes

FNE 948 changes

* FNE 117 changes

FNE 117 changes

* FNE 1176 changes

FNE 1176 changes

* FNE 1176 changes

FNE 1176 changes

* FNE 1176 changes

FNE 1176 changes

* FNE 1176 changes

FNE 1176 changes

* FNE 9948 changes

FNE 9948 changes

* FNE 948 changes

FNE 948 changes

--- a/front-end/src/app/forms/transactions/filter/transactions-filter.component.html
+++ b/front-end/src/app/forms/transactions/filter/transactions-filter.component.html
@@ -230,10 +230,10 @@
             <ul class="transactions__filter-type-list">
               <li *ngFor="let itemization of itemizations">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="{{ itemization?.itemization_code }}" 
+                  <input class="form-check-input" type="checkbox" id="{{ itemization?.itemized }}" 
                     [(ngModel)]="itemization.selected">
-                  <label class="form-check-label" for="{{ itemization?.itemization_code }}">
-                    {{ itemization?.itemization_code }} - {{ itemization?.itemization_desc}}</label>
+                  <label class="form-check-label" for="{{ itemization?.itemized }}">
+                    {{ itemization?.itemized }} - {{ itemization?.itemization_desc}}</label>
                  </div>
               </li>
             </ul>
