--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -77,7 +77,7 @@
           }
           label {
             font-family: 'Karla Regular';
-            font-size: 16pt;
+            font-size: 12px;
           }
           .ng-select.transaction-type-select,
           .ng-select.transaction-category-select {
