--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -30,7 +30,7 @@
           <ng-container *ngIf="row.cols | isArray">
             <div [class]="row.colClassName" *ngFor="let col of row.cols">
               <div class="form-group">
-                <label for="{{ col.name }}">
+                <label for="{{ col.name }}" style="display: block;">
                   {{ col.text }}
                   <button
                     type="button"
@@ -131,7 +131,13 @@
                   </div>
                 </ng-container>
                 <ng-container *ngIf="col.type === 'textarea'">
-                  <textarea class="form-control" rows="5" name="{{ col.name }}" [formControlName]="col.name"></textarea>
+                  <textarea 
+                    [style.height]="col.height"
+                    [style.width]="col.width"
+                    [style.overflow]="col.scroll ? col.scroll : null"
+                    [name]="col.name" 
+                    [formControlName]="col.name"
+                  ></textarea>
                 </ng-container>
                 <ng-container *ngIf="col.type === 'select' && col.name === 'state'">
                   <ng-select
