--- a/front-end/src/app/shared/partials/sign/sign.component.scss
+++ b/front-end/src/app/shared/partials/sign/sign.component.scss
@@ -7,6 +7,8 @@
     .grid-row__col {
       padding-left: 0;
       padding-right: 0;
+      padding-top: 10px;
+      padding-bottom: 10px;
 
       input[type='text'],
           input[type='date'],
@@ -35,7 +37,8 @@
       display: block;
       width: 100%;
       border-bottom: 1px solid $bombay;
-      padding-bottom: .75em;
+      padding-bottom: .50em;
+      padding-top: .50em;
       margin-bottom: 1em;
       .header__text {
         display: block;
