Fixing issue when error with state select

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -146,7 +146,7 @@
                     [ngClass]="
                       frmIndividualReceipt.get(col?.name)?.invalid &&
                       (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                        ? 'input-field-error'
+                        ? 'state-select-error'
                         : ''
                     "
                   >
