--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -30,7 +30,7 @@
           <ng-container *ngIf="row.cols | isArray">
             <div [class]="row.colClassName" *ngFor="let col of row.cols">
               <div class="form-group">
-                <label [for]="col?.name" style="display: block;">
+                <label [for]="col?.name">
                   {{ col.text }}
                   <button
                     type="button"
@@ -69,7 +69,6 @@
                   </ng-container>
                   <ng-container *ngIf="!col.inputGroup">
                     <input
-                      style="display: block;"
                       [style.width]="col?.width"
                       [style.height]="col.height"
                       [type]="col.type"
