--- a/front-end/src/app/shared/scss/_custom-colors.scss
+++ b/front-end/src/app/shared/scss/_custom-colors.scss
@@ -5,6 +5,7 @@ $bombay: #AEB0B5; // middle gray
 $dustyGray: #9B9B9B; // dark gray
 $shuttleGray: #5B616B; //really dark gray
 $mercury: #E6E6E6; // really light gray
+$ghost: #ced4da; // light gray
 $seaShell: #F1F1F1; // really light gray, almost like white
 
 $pictonBlue: #39B9F7; // really light blue for links
