--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -66,11 +66,11 @@
           input[type='text'],
           input[type='date'],
           input[type='number'] {
-            &.form-control {
-              height: 30px;
-              padding-left: 5px;
-              padding-right: 5px;
-            }
+            border: 1px solid $ghost;
+            border-radius: .25rem;
+            height: 30px;
+            padding-left: 5px;
+            padding-right: 5px;
           }
           textarea {
             &.form-control {
@@ -82,6 +82,9 @@
             font-family: 'sans-serif';
             font-size: 13px;
           }
+          /**
+           * Custom CSS for state dropdown component.
+           */
           .ng-select.state-select {
             &.state-select-error {
               .ng-select-container {
@@ -91,6 +94,11 @@
             .ng-select-container {
               height: 30px;
               width: 235px;
+              .ng-input {
+                input[type='text'] {
+                  border: none;
+                }
+              }
             }
           }
           .ng-dropdown-panel {
