--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -19,7 +19,11 @@
           </div>
         </div>
       </div>
-      <hr />
+      <div class="row">
+        <div class="col-md-12">
+          <hr />
+        </div>
+      </div>
     </header>
     <section>
       <ng-container *ngFor="let hiddenField of hiddenFields">
@@ -156,9 +160,16 @@
                   </ng-select>
                 </ng-container>
               </div>
-            </div>
+            </div> <!-- ./col -->
           </ng-container>
-        </div>
+        </div> <!-- ./row -->
+        <ng-container *ngIf="row.seperator">
+          <div class="row">
+            <div class="col-md-12">
+             <hr /> 
+            </div>
+          </div>
+        </ng-container>         
       </ng-container>
     </section>
     <footer>
