--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -15,7 +15,7 @@
           </button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
             <button class="dropdown-item"><i class="view-icon"></i> View</button>
-            <button class="dropdown-item"><i class="print-icon"></i> Print</button>
+            <button class="dropdown-item" (click)="printPreview()"><i class="print-icon"></i> Print</button>
           </div>
         </div>
       </div>
