--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
@@ -113,7 +113,7 @@
   </section>
   <footer>
     <div class="form-sidebar__item">
-      <div class="form-sidebar-item__text">
+     <!-- <div class="form-sidebar-item__text">
         Cash On Hand
       </div>
       <div class="form-sidebar-item__value">
@@ -126,7 +126,7 @@
           Summary
         </button>
       </div>
-      <!--<div class="btn-row">
+      <div class="btn-row">
         <button type="button" class="btn btn-secondary">
           Sign &amp; Submit
         </button>
