--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -24,7 +24,7 @@
           </button>
           <div ngbDropdownMenu aria-labelledby="actionsMenu">
             <button class="dropdown-item"><i class="view-icon"></i> View</button>
-            <button class="dropdown-item"><i class="print-icon"></i> Print</button>
+            <button class="dropdown-item" (click)="printPreview()" ><i class="print-icon"></i> Print</button>
             <button class="dropdown-item"><i class="far fa-file-import"></i> Import</button>            
           </div>
         </div>
