--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -11,7 +11,7 @@
   
     <!--<div class="form__container"></div>-->
     <div class="transactions__container">
-        <div class="form__content">
+        <div class="header-content">
           <header>
               <div class="header-container">
                 <h1 class="pb-1 m-3 border-bottom">Reports</h1>
@@ -21,9 +21,9 @@
             <div class="grid-row">
                  <div class="grid-row__col grid-row__col--12">
                    <div class="transactions__btn-container">                 
-                      <button [@fadeInOut] *ngIf="isReportViewActive()"  class="btn btn-primary" type="button" (click)="showPinColumns()">
+                     <!-- <button [@fadeInOut] *ngIf="isReportViewActive()"  class="btn btn-primary" type="button" (click)="showPinColumns()">
                       <i class="thumbtack-icon"></i>Pin Columns
-                      </button> &nbsp;&nbsp;&nbsp;
+                      </button> &nbsp;&nbsp;&nbsp;-->
           
                       <button  class="btn btn-primary" (click)="showFilter()">
                       <i class="fas fa-filter"></i> Filter
@@ -78,7 +78,7 @@
                   (click)="viewMode = 'tab1'"
                   [ngClass]="viewMode === 'tab1' ? 'btn btn-block btn-primary' : 'btn btn-block btn-link btn-secondary-gray'"
                 >
-                <b>Current Year ({{currentYear}})</b>
+                <h3>Current Year ({{currentYear}})</h3>
                 </button>
               </div>
      
@@ -88,7 +88,7 @@
                   (click)="viewMode = 'tab2'"
                   [ngClass]="viewMode === 'tab2' ? 'btn btn-block btn-primary' : 'btn btn-block btn-link btn-secondary-gray'"
                 >
-                <b>Archives</b>
+                <h3>Archives</h3>
                 </button>
               </div>
             </div>
