Starting to implement

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -86,6 +86,7 @@
                           ? 'input-field-error'
                           : ''
                       "
+                      (change)="col?.name === 'memo_code' ? memoCodeChange($event) : null"
                     />
                   </ng-container>
                   <div
