--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -3,12 +3,18 @@
     <h3 class="text-center">Transaction Categories</h3>
     <hr />
 
-    <div class="search-field-container">
+    <div class="search">
+      <span class="fa fa-search"></span>
+      <input type="text" placeholder="Search by Type">
+    </div>
+
+    <!-- <div class="search-field-container">
       <div class="form-group ml-1 mt-2">
         <input type="text" name="search" class="search-input" placeholder="Search by Type" class="form-control py-1" />
-        <i class="search-icon" aria-hidden="true"></i>
+        <span class="search-icon" aria-hidden="true"></span>
       </div>
-    </div>
+    </div> -->
+
   </header>
   <section>
     <ul class="form-sidebar__links">
