--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -76,6 +76,9 @@
             height: 30px;
             padding-left: 5px;
             padding-right: 5px;
+            &.input-field-error {
+              border: 1px solid $red;
+            }
           }
           textarea {
             &.form-control {
